--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <button onclick="goBack()">Back</button>
     </div>
     <footer>
-        <p>by juliadustygreen</p>
+        <p>by lemontardd</p>
     </footer>
     <script src="script.js"></script>
 </body>
