--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         <h2>Calculate Ingredients</h2>
         <label for="newEggWhites">Egg Whites (g):</label>
         <input type="number" id="newEggWhites" step="0.01" oninput="calculateIngredients()">
-        <p>Sugar (g): <span id="newSugar"></span></p>
-        <p>Almond Flour (g): <span id="newAlmondFlour"></span></p>
-        <p>Powdered Sugar (g): <span id="newPowderedSugar"></span></p>
+        <label for="newSugar">Sugar (g): <span id="newSugar"></span></label>
+        <label for="newAlmondFlour">Almond Flour (g): <span id="newAlmondFlour"></span></label>
+        <label for="newPowderedSugar">Powdered Sugar (g): <span id="newPowderedSugar"></span></label>
         <button onclick="goBack()">Back</button>
     </div>
     <footer>
