--- a/index.html
+++ b/index.html
@@ -26,13 +26,16 @@
         <h2>Calculate Ingredients</h2>
         <label for="newEggWhites">Egg Whites (g):</label>
         <input type="number" id="newEggWhites" step="0.01" oninput="calculateIngredients()">
-        <label for="newSugar">Sugar (g): <span id="newSugar"></span></label>
-        <label for="newAlmondFlour">Almond Flour (g): <span id="newAlmondFlour"></span></label>
-        <label for="newPowderedSugar">Powdered Sugar (g): <span id="newPowderedSugar"></span></label>
+        <label for="newSugar">Sugar (g):</label>
+        <input type="number" id="newSugar" readonly>
+        <label for="newAlmondFlour">Almond Flour (g):</label>
+        <input type="number" id="newAlmondFlour" readonly>
+        <label for="newPowderedSugar">Powdered Sugar (g):</label>
+        <input type="number" id="newPowderedSugar" readonly>
         <button onclick="goBack()">Back</button>
     </div>
     <footer>
-        <p>by lemontardd</p>
+        <p>by juliadustygreen</p>
     </footer>
     <script src="script.js"></script>
 </body>
